Add new lession

--- a/CSS-Grid/v2-columns.html
+++ b/CSS-Grid/v2-columns.html
@@ -26,6 +26,9 @@
       /* sử dụng grid-teamplate-columns: repeat(số lượng lặp, giá trị lặp); để chia columns. */
       /* grid-template-columns: 33.33% 33.33% 33.33%; */
       /* grid-template-columns: repeat(3, 1fr); */
+      /* tạo ra 3 columns: và chia đều là 1fr 2fr 3fr
+        vậy ta có 3 cột và chia đều  1fr 2fr 3fr
+       */
       grid-template-columns: 1fr 2fr 3fr;
 
 
