--- a/CSS-Grid/v5-NestedGrids.html
+++ b/CSS-Grid/v5-NestedGrids.html
@@ -4,15 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video 4: Column And Row Lines</title>
+  <title>Video 5: Nested Grids</title>
   <style>
-    /* *,
-    *::before,
-    *::after {
-      padding: 0;
-      margin: 0;
-    } */
-
     body {
       color: #fff;
       font-family: 'Nunito Semibold';
@@ -21,12 +14,10 @@
 
     #content {
       display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: repeat(6, minmax(150px, auto));
+      grid-template-columns: repeat(3, 1fr);
       grid-gap: 10px;
       max-width: 960px;
       margin: 0 auto;
-
     }
 
     #content div {
@@ -38,45 +29,40 @@
       background-color: #777;
     }
 
-    /* (columns - 1>9) (row - 1>8) */
-    /* ta phải hiểu 1>9 hay 1>8 là các line và tính từ cột đầu của element */
-    .one {
-      grid-column-start: 1;
-      grid-column-end: 3;
+    /* grid lòng trong grid */
+    .nested {
+      /* nếu display: grid; khong duoc hoat dong thi khong the dung grid cho cac element con */
+      /* display: grid; */
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 10px;
+      /* grid-column: 1 / 4; */
+      /* dùng span keyword nhé biết vậy là được */
+      grid-column: span 3;
     }
 
-    .two {
-      grid-column: 3/7;
-    }
-
-    .three {
-      grid-column: 1/5;
-      grid-row: 2/5;
-    }
-
-    .four {
-      grid-column: 5/7;
-      grid-row: 2/5;
-    }
-
-    .five {
-      grid-column: 1/3;
-    }
-
-    .six {
-      grid-column: 3/7;
+    .nested p {
+      border: 1px solid #fff;
+      padding: 20px;
+      margin: 0;
     }
   </style>
 </head>
 
 <body>
-  <div id="content">
+  <div class="" id="content">
+
     <div class="one">1</div>
     <div class="two">2</div>
     <div class="three">3</div>
-    <div class="four">4</div>
+    <div class="nested">
+      <p>1</p>
+      <p>2</p>
+      <p>3</p>
+      <p>4</p>
+    </div>
     <div class="five">5</div>
     <div class="six">6</div>
+
     <!-- <div>7</div>
     <div>8</div>
     <div>9</div> -->
