--- a/CSS-Grid/v6-AligningAndJustifyingItems.html
+++ b/CSS-Grid/v6-AligningAndJustifyingItems.html
@@ -4,15 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video 4: Column And Row Lines</title>
+  <title>Video 6: Aligning & Justifying Items</title>
   <style>
-    /* *,
-    *::before,
-    *::after {
-      padding: 0;
-      margin: 0;
-    } */
-
     body {
       color: #fff;
       font-family: 'Nunito Semibold';
@@ -21,12 +14,17 @@
 
     #content {
       display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: repeat(6, minmax(150px, auto));
+      grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: minmax(150px, auto);
       grid-gap: 10px;
       max-width: 960px;
       margin: 0 auto;
 
+      /* align-items: for all element (start, end, center)*/
+      /* align-items: start; */
+      /* align-items: stretch;
+
+      justify-items: end; */
     }
 
     #content div {
@@ -38,45 +36,33 @@
       background-color: #777;
     }
 
-    /* (columns - 1>9) (row - 1>8) */
-    /* ta phải hiểu 1>9 hay 1>8 là các line và tính từ cột đầu của element */
     .one {
-      grid-column-start: 1;
-      grid-column-end: 3;
+      align-self: end;
+      justify-self: end;
     }
 
     .two {
-      grid-column: 3/7;
+      justify-self: center;
+      align-self: center;
     }
 
     .three {
-      grid-column: 1/5;
-      grid-row: 2/5;
-    }
-
-    .four {
-      grid-column: 5/7;
-      grid-row: 2/5;
-    }
-
-    .five {
-      grid-column: 1/3;
-    }
-
-    .six {
-      grid-column: 3/7;
+      justify-self: start;
+      align-self: start;
     }
   </style>
 </head>
 
 <body>
-  <div id="content">
+  <div class="" id="content">
+
     <div class="one">1</div>
     <div class="two">2</div>
     <div class="three">3</div>
     <div class="four">4</div>
     <div class="five">5</div>
     <div class="six">6</div>
+
     <!-- <div>7</div>
     <div>8</div>
     <div>9</div> -->
