--- a/CSS-Grid/v8-MosaicLayout.html
+++ b/CSS-Grid/v8-MosaicLayout.html
@@ -4,15 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video 4: Column And Row Lines</title>
+  <title>Video 8: Mosaic Layout</title>
   <style>
-    /* *,
-    *::before,
-    *::after {
-      padding: 0;
-      margin: 0;
-    } */
-
     body {
       color: #fff;
       font-family: 'Nunito Semibold';
@@ -22,49 +15,45 @@
     #content {
       display: grid;
       grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: repeat(6, minmax(150px, auto));
+      grid-auto-rows: minmax(150px, auto);
       grid-gap: 10px;
       max-width: 960px;
       margin: 0 auto;
-
+      position: relative;
     }
 
     #content div {
-      background-color: #3BBCED;
+      background-color: #333;
       padding: 30px;
     }
 
-    #content div:nth-child(even) {
-      background-color: #777;
-    }
-
-    /* (columns - 1>9) (row - 1>8) */
-    /* ta phải hiểu 1>9 hay 1>8 là các line và tính từ cột đầu của element */
     .one {
-      grid-column-start: 1;
-      grid-column-end: 3;
+      grid-column: 1 / 3;
+      grid-row: 1 / 5;
     }
 
     .two {
-      grid-column: 3/7;
+      grid-column: 3 / 7;
+      grid-row: 1 / 3;
     }
 
     .three {
-      grid-column: 1/5;
-      grid-row: 2/5;
+      grid-column: 3 / 5;
+      grid-row: 3 / 5;
     }
 
     .four {
-      grid-column: 5/7;
-      grid-row: 2/5;
+      grid-column: 5 / 7;
+      grid-row: 3 / 7;
     }
 
     .five {
-      grid-column: 1/3;
+      grid-column: 1 / 5;
+      grid-row: 5 / 7;
     }
 
-    .six {
-      grid-column: 3/7;
+    #content {
+      transform: rotate(45deg) scale(0.7);
     }
   </style>
 </head>
@@ -76,10 +65,6 @@
     <div class="three">3</div>
     <div class="four">4</div>
     <div class="five">5</div>
-    <div class="six">6</div>
-    <!-- <div>7</div>
-    <div>8</div>
-    <div>9</div> -->
   </div>
 </body>
 
