--- a/CSS-Grid/v7-MakingA12-ColumnGrid.html
+++ b/CSS-Grid/v7-MakingA12-ColumnGrid.html
@@ -84,13 +84,17 @@
     input:checked+#content #grid {
       display: grid;
     }
+
+    label {
+      color: black;
+    }
   </style>
 
 </head>
 
 
 <body>
-  <input type="checkbox">
+  <input id="check" type="checkbox">
   <div id="content">
 
     <div id="grid">
